--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 <div class="container">
     <h1>Mystery words from Mexico</h1>
     <br>
-    <img class="skull" onClick='alert("No TOQUE!")' src=https://68.media.tumblr.com/c942a2fa0887f008d0a72b3f0daba4c0/tumblr_og08xnTnwi1qkp8jso1_500.gif>
-    <p>My first paragraph (foto aqui).</p>
+    <img class="skull" onClick='alert("No TOQUE Guey!")' src=https://68.media.tumblr.com/c942a2fa0887f008d0a72b3f0daba4c0/tumblr_og08xnTnwi1qkp8jso1_500.gif>
 
-    <button type="button" id="randomWord" class="btn btn-danger">Danger</button>
+
+    <button type="button" id="randomWord" class="btn btn-danger"> ¡Play! </button>
+
+
 
 <div id="hidden-word">
-  <p class= "row">Dale</p>
+  <p class= "row"></p>
 </div>
-<img id="surprise" >
-</div>
-<button id="show">Petateas!</button>
-<span> 0 </span>
+<div><img id="surprise" ></div>
 
+</div>
+<button type="button" id="randomWord1" class="btn btn-danger"> Picale! </button>
+<button id="show">Petateas!</button>
+<span> 6 </span>
+<div id=loser></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- jQuerty -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
