--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div><img id="surprise" ></div>
 
 </div>
-<button type="button" id="randomWord1" class="btn btn-danger"> Picale! </button>
-<button id="show">Petateas!</button>
+<button type="button" id="randomWord1" class="btn btn-danger"> ¡Picale! </button>
+<button id="show">¡Petateas!</button>
 <span> 6 </span>
 <div id=loser></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
