--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
     <title> Ruleta del Güey Misterio</title>
+    <link rel="shortcut icon" href="img/faviconn.png" id="favicon" />
     <!-- font-style --> <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 </head>
 
