--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
 
 
     <button type="button" id="randomWord" class="btn btn-danger"> ¡Play! </button>
+    <button id="show">Give Up!</button>
 
 
 
-<div id="hidden-word">
+<div id="hidden-word"></div>
     <div><img id="surprise" ></div>
   <p class= "row"></p>
-</div>
-
-
-</div>
-<button type="button" id="randomWord1" class="btn btn-danger"> Picale! </button>
-<button id="show">Petateas!</button>
 <span> 6 </span>
+</div>
+
+
 <div id=loser></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- jQuerty -->
